@@ -1,3 +1,8 @@
+2013-12-02 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/jit_x86-x87.c, lib/jit_x86.c: Use 8 bytes aligned
+	stack offset for float/double x87 to/from sse move.
+
 2013-11-27 Paulo Andrade <pcpa@gnu.org>
 
 	* configure.ac, lib/jit_arm-swf.c, lib/jit_arm.c: Add
